# lox

./: .gitignore  CMakeLists.txt  main.cpp
include/: scanner.hpp
src/: main.cpp  scanner.cpp  scanner.h  token.cpp  token.h
